--- a/src/app/views/entrepots/list-entrepots/list-entrepots.component.scss
+++ b/src/app/views/entrepots/list-entrepots/list-entrepots.component.scss
@@ -6,9 +6,9 @@ li:hover{
 }
 
 .listm{
-    background-color:#9f9d9954 !important;
+   // background-color:#9f9d9954 !important;
   
 }
 .list-group{
-    background-color:#9f9d9954 !important;
+   // background-color:#9f9d9954 !important;
 }
