--- a/src/app/register/login/login.component.html
+++ b/src/app/register/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-8 divImg">
+    <div class="col-md-8 col-xs-12 divImg">
       
         <img src="../../../assets/image/login.jpeg"  class="img-fluid w-100 h-100"  />
    
     </div>
-    <div class="col-md-4 p-4 ">
+    <div class="col-md-4 p-4 col-xs-12 ">
       <div class="container p-4 ">
         <div class="col-md-12 d-flex justify-content-center">
           <img src="../../../assets/image/logo.jpeg"  alt="" />
@@ -37,7 +37,7 @@
                 </div>
               </div>
               <div class="col-md-12 text-center mt-4">
-                <button type="submit" class="btn btn-primary"  (click)="login()">Connexion</button>
+                <button type="submit" class="btn btn-primary" [disabled]="loginForm.value === null "  (click)="login()">Connexion</button>
               </div>
               <div class="col-md-12 mt-4">
                 <!-- <p>Vous n'avez pas de compte ? <a href="" routerLink="/singup">Inscrivez vous</a></p> -->
