--- a/src/app/views/entrepots/create-entrepots/create-entrepots.component.html
+++ b/src/app/views/entrepots/create-entrepots/create-entrepots.component.html
@@ -32,9 +32,9 @@
             <div class="col-md-12">
               <select class="form-select" aria-label="Default select example"  formControlName="libelle">
                 <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+                <option value="Accp">Accp</option>
+                <option value="Yop">Yop</option>
+                <option value="ACCD">Accd</option>
               </select>
             </div>
           </div>
@@ -61,9 +61,9 @@
             <div class="col-md-12">
               <select class="form-select" aria-label="Default select example"  formControlName="placer">
                 <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+                <option value="Abidjan">Abidjan</option>
+                <option value="Dabou">Dabou</option>
+                <option value="Divo">Divo</option>
               </select>
             </div>
           </div>
