--- a/src/app/views/entrepots/list-entrepots/list-entrepots.component.html
+++ b/src/app/views/entrepots/list-entrepots/list-entrepots.component.html
@@ -11,12 +11,12 @@
           </nav>
         </div>
         <div class=" col-md-4 d-flex justify-content-end ">
-          <button type="submit" class="btn btn-primary" routerLink="/entrepots/creerEntrepots">Creer un entrepot</button>
+          <button type="submit" class="btn btn-primary" routerLink="/entrepots/creerEntrepots" ariaPlaceholder="chercher">Creer un entrepot</button>
         </div>
       </div>
   <div class="container-fluid row">
     <div class="col-md-3 listm  p-2">
-      <ul class="list-group " *ngFor="let item of listMenu">
+      <ul class="list-group " *ngFor="let item of listMenu ">
         <app-list  [tittle]="item.tittle" [nombre]="item.numbre" > </app-list>
       </ul>
     </div>
@@ -25,11 +25,45 @@
         <p class="text-color">Historique entrepots</p>
         <input type="search" name="" id="" />
       </div>
-      <div>
-      <table class="table table-striped">
+      <div class="mt-4">
+      
+        <table mat-table [dataSource]="dataSource " class="mat-elevation-z8 table-striped">
 
-      </table>
+          <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+        
+          <!-- Position Column -->
+          <ng-container matColumnDef="libelle">
+            <th mat-header-cell *matHeaderCellDef> libelle </th>
+            <td mat-cell *matCellDef="let element"> {{element.libelle}} </td>
+          </ng-container>
+        
+          <!-- Name Column -->
+          <ng-container matColumnDef="superficie">
+            <th mat-header-cell *matHeaderCellDef> superficie </th>
+            <td mat-cell *matCellDef="let element"> {{element.superficie}} </td>
+          </ng-container>
+        
+          <!-- Weight Column -->
+          <ng-container matColumnDef="placer">
+            <th mat-header-cell *matHeaderCellDef> placer </th>
+            <td mat-cell *matCellDef="let element"> {{element.placer}} </td>
+          </ng-container>
+        
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>action </th>
+            <td mat-cell *matCellDef="let element"> <button type="submit" class="btn btn-primary" (click)="deleteEntrepot(element.id)">  <mat-icon>delete</mat-icon></button> </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        
+        
+      
       </div>
     </div>
   </div>
 </app-menu>
+
